--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <input class="form-control" id="trainName-input" type="text">
                         </div>
                         <div class="form-group">
-                            <label for="detination-input">Destination</label>
+                            <label for="destination-input">Destination</label>
                             <input class="form-control" id="destination-input" type="text">
                         </div>
                         <div class="form-group">
@@ -86,10 +86,6 @@
             </div>
     </div>
     
-
-
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
